--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
     environment:
       - LOCAL=True
       - GUNICORN_reload=True
+    depends_on:
+      - redis
+
+  redis:
+    build: ./redis
+    ports:
+      - 6379
