--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "prod": "webpack --mode production",
     "dev": "webpack --mode development",
     "start": "webpack --mode development --watch"
   },
@@ -11,12 +12,14 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^3.4.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "style-loader": "^1.1.3"
   }
 }
